# cdotenv

./: .env  .gitignore  README.md
java/: .gitignore  CDotEnv.java  CDotEnvException.java  CMakeLists.txt  Main.java  cdotenv_java.c  cdotenv_java.h
lib/: CMakeLists.txt  cdotenv.c  cdotenv.h
test/: CMakeLists.txt  main.c
